--- a/index.html
+++ b/index.html
@@ -149,13 +149,12 @@
       <p>Mi proyecto de vida es poder abrir una tienda de mascotas que ese proyecto ya está en curso, Desde siempre, valoramos la biodiversidad y su conservación, sabemos que los esfuerzos por lograr la reproducción en cautiverio de distintas especies, es el camino correcto para lograr que la afición por la fauna impacte mínimamente en los ecosistemas, por ello nos comprometemos totalmente con la crianza  controlada, legal, ética y profesional de nuestros especímenes, para que nuestros clientes puedan disfrutar al máximo su afición y pasión por lo reptiles. No solo buscamos complacer a los clientes más exigentes, también procuramos el bienestar de nuestros animales.</p>
 
       <div>
-        <a href=".\imagenes\imagen1.jpeg" data-lightbox="galeria"><img src=".\imagenes\imagen1.jpeg" alt=""></a>
+        <a href="./img/imagen1.jpeg" data-lightbox="galeria"><img src="./img/imagen1.jpeg" alt=""></a>
 
-        <a href="./imagenes/imagen2.jpeg" data-lightbox="galeria"><img src="./imagenes/imagen2.jpeg" alt=""></a>
+        <a href="./img/imagen2.jpeg" data-lightbox="galeria"><img src="./img/imagen2.jpeg" alt=""></a>
 
-        <a href="D:\notas uniat\semestre 3\programacion web\examen parcial 1\imagenes\imagen3.jpeg" data-lightbox="galeria"><img src="D:\notas uniat\semestre 3\programacion web\examen parcial 1\imagenes\imagen3.jpeg" alt=""></a>
+        <a href="./img/imagen3.jpeg" data-lightbox="galeria"><img src="./img/imagen3.jpeg" alt=""></a>
 
-        <a href="D:\notas uniat\semestre 3\programacion web\examen parcial 1\imagenes\WhatsApp Image 2023-01-15 at 3.09.22 PM.jpeg" data-lightbox="galeria"><img src="D:\notas uniat\semestre 3\programacion web\examen parcial 1\imagenes\WhatsApp Image 2023-01-15 at 3.09.22 PM.jpeg" alt=""></a>
       </div>
 
     </section>
